--- a/in_progress/census/full.ipynb
+++ b/in_progress/census/full.ipynb
@@ -195,7 +195,7 @@
    "metadata": {},
    "source": [
     "<a name=\"questionnaire\"></a>\n",
-    "### [(^top)](#toc) Questionnaire\n",
+    "### [^](#toc) Questionnaire\n",
     "\n",
     "The 2010 Census form ([photo](https://www.census.gov/history/pdf/2010questionnaire.pdf))"
    ]
@@ -229,7 +229,7 @@
    "metadata": {},
    "source": [
     "<a name=\"dataset\"></a>\n",
-    "### [(^top)](#toc) Dataset\n",
+    "### [^](#toc) Dataset\n",
     "\n",
     "In the exact words of Kaggle user [Muon Neutrino](https://www.kaggle.com/muonneutrino), the individual who hosts this [dataset](https://www.kaggle.com/muonneutrino/us-census-demographic-data) on Kaggle\n",
     "\n",
@@ -252,7 +252,7 @@
    "metadata": {},
    "source": [
     "<a name=\"tracts\"></a>\n",
-    "### [(^top)](#toc) Tracts\n",
+    "### [^](#toc) Tracts\n",
     "\n",
     "Tracts are.  They range from 3 to 53,812 people but are generally around 4,000 people\n",
     "\n",
@@ -313,7 +313,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### County"
+    "<a name=\"counties\"></a>\n",
+    "### [^](#toc) <u>Counties</u>"
    ]
   },
   {
@@ -363,7 +364,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### State\n",
+    "<a name=\"states\"></a>\n",
+    "### [^](#toc) <u>States</u>\n",
     "\n",
     "Okay, we all know what a State it, but let's see some visualizations anyways"
    ]
@@ -418,230 +420,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overview"
+    "<a name=\"general\"></a>\n",
+    "# [^](#toc) <u>General</u>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of county (3220, 37)\n",
-      "Shape of tract (74001, 37)\n",
-      "Columns Index(['CensusId', 'State', 'County', 'TotalPop', 'Men', 'Women', 'Hispanic',\n",
-      "       'White', 'Black', 'Native', 'Asian', 'Pacific', 'Citizen', 'Income',\n",
-      "       'IncomeErr', 'IncomePerCap', 'IncomePerCapErr', 'Poverty',\n",
-      "       'ChildPoverty', 'Professional', 'Service', 'Office', 'Construction',\n",
-      "       'Production', 'Drive', 'Carpool', 'Transit', 'Walk', 'OtherTransp',\n",
-      "       'WorkAtHome', 'MeanCommute', 'Employed', 'PrivateWork', 'PublicWork',\n",
-      "       'SelfEmployed', 'FamilyWork', 'Unemployment'],\n",
-      "      dtype='object')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CensusId</th>\n",
-       "      <th>State</th>\n",
-       "      <th>County</th>\n",
-       "      <th>TotalPop</th>\n",
-       "      <th>Men</th>\n",
-       "      <th>Women</th>\n",
-       "      <th>Hispanic</th>\n",
-       "      <th>White</th>\n",
-       "      <th>Black</th>\n",
-       "      <th>Native</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Walk</th>\n",
-       "      <th>OtherTransp</th>\n",
-       "      <th>WorkAtHome</th>\n",
-       "      <th>MeanCommute</th>\n",
-       "      <th>Employed</th>\n",
-       "      <th>PrivateWork</th>\n",
-       "      <th>PublicWork</th>\n",
-       "      <th>SelfEmployed</th>\n",
-       "      <th>FamilyWork</th>\n",
-       "      <th>Unemployment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1001</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>55221</td>\n",
-       "      <td>26745</td>\n",
-       "      <td>28476</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>75.8</td>\n",
-       "      <td>18.5</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>26.5</td>\n",
-       "      <td>23986</td>\n",
-       "      <td>73.6</td>\n",
-       "      <td>20.9</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1003</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Baldwin</td>\n",
-       "      <td>195121</td>\n",
-       "      <td>95314</td>\n",
-       "      <td>99807</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>83.1</td>\n",
-       "      <td>9.5</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>26.4</td>\n",
-       "      <td>85953</td>\n",
-       "      <td>81.5</td>\n",
-       "      <td>12.3</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>7.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1005</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Barbour</td>\n",
-       "      <td>26932</td>\n",
-       "      <td>14497</td>\n",
-       "      <td>12435</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>46.2</td>\n",
-       "      <td>46.7</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>24.1</td>\n",
-       "      <td>8597</td>\n",
-       "      <td>71.8</td>\n",
-       "      <td>20.8</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>17.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1007</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Bibb</td>\n",
-       "      <td>22604</td>\n",
-       "      <td>12073</td>\n",
-       "      <td>10531</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>74.5</td>\n",
-       "      <td>21.4</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>28.8</td>\n",
-       "      <td>8294</td>\n",
-       "      <td>76.8</td>\n",
-       "      <td>16.1</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>8.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1009</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Blount</td>\n",
-       "      <td>57710</td>\n",
-       "      <td>28512</td>\n",
-       "      <td>29198</td>\n",
-       "      <td>8.6</td>\n",
-       "      <td>87.9</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>34.9</td>\n",
-       "      <td>22189</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>7.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   CensusId    State   County  TotalPop    Men  Women  Hispanic  White  Black  \\\n",
-       "0      1001  Alabama  Autauga     55221  26745  28476       2.6   75.8   18.5   \n",
-       "1      1003  Alabama  Baldwin    195121  95314  99807       4.5   83.1    9.5   \n",
-       "2      1005  Alabama  Barbour     26932  14497  12435       4.6   46.2   46.7   \n",
-       "3      1007  Alabama     Bibb     22604  12073  10531       2.2   74.5   21.4   \n",
-       "4      1009  Alabama   Blount     57710  28512  29198       8.6   87.9    1.5   \n",
-       "\n",
-       "   Native      ...       Walk  OtherTransp  WorkAtHome  MeanCommute  Employed  \\\n",
-       "0     0.4      ...        0.5          1.3         1.8         26.5     23986   \n",
-       "1     0.6      ...        1.0          1.4         3.9         26.4     85953   \n",
-       "2     0.2      ...        1.8          1.5         1.6         24.1      8597   \n",
-       "3     0.4      ...        0.6          1.5         0.7         28.8      8294   \n",
-       "4     0.3      ...        0.9          0.4         2.3         34.9     22189   \n",
-       "\n",
-       "   PrivateWork  PublicWork  SelfEmployed  FamilyWork  Unemployment  \n",
-       "0         73.6        20.9           5.5         0.0           7.6  \n",
-       "1         81.5        12.3           5.8         0.4           7.5  \n",
-       "2         71.8        20.8           7.3         0.1          17.6  \n",
-       "3         76.8        16.1           6.7         0.4           8.3  \n",
-       "4         82.0        13.5           4.2         0.4           7.7  \n",
-       "\n",
-       "[5 rows x 37 columns]"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "print(\"Shape of county\", county.shape)\n",
     "print(\"Shape of tract\", tract.shape)\n",
@@ -653,9 +442,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"general\"></a>\n",
-    "# <u>General</u>\n",
-    "\n",
     "### <u>Missing values</u>\n",
     "\n",
     "Before we really start looking at the data, we need to see first if any preprocessing needs to be done.  This can take form in multiple ways such as incorrect data, removing outliers (sometimes!), formating errors, adding or removing columns.\n",
@@ -1877,7 +1663,7 @@
    "metadata": {},
    "source": [
     "<a name=\"state\"></a>\n",
-    "# <u>State</u>\n",
+    "# [^](#toc) <u>State</u>\n",
     "\n",
     "### Can two states have the same county name?\n",
     "\n",
@@ -2401,7 +2187,7 @@
     "---\n",
     "\n",
     "<a name=\"race\"></a>\n",
-    "# [(^top)](#toc) <u>Racial Focus</u>\n",
+    "# [^](#toc) <u>Racial Focus</u>\n",
     "\n",
     "### Total race population"
    ]
@@ -2602,7 +2388,7 @@
     "---\n",
     "\n",
     "<a name=\"numeric\"></a>\n",
-    "# [(^top)](#toc) Numeric Focus\n",
+    "# [^](#toc) Numeric Focus\n",
     "\n",
     "\n",
     "### Quick look\n",
@@ -2796,7 +2582,7 @@
    "metadata": {},
    "source": [
     "<a name=\"nu_income\"></a>\n",
-    "### [(^top)](#toc) Income"
+    "### [^](#toc) <u>Income</u>"
    ]
   },
   {
@@ -2946,7 +2732,7 @@
    "metadata": {},
    "source": [
     "<a name=\"nu_comute\"></a>\n",
-    "### [(^top)](#toc) Commute times"
+    "### [^](#toc) <u>Commute times</u>"
    ]
   },
   {
@@ -3048,7 +2834,7 @@
    "metadata": {},
    "source": [
     "<a name=\"fun\"></a>\n",
-    "# [(^top)](#toc) Focus on Fun!\n",
+    "# [^](#toc) <u>Focus on Fun!</u>\n",
     "\n",
     "### Longest and Shortest County names"
    ]
@@ -3562,13 +3348,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"resources\"></a>\n",
+    "# [^](#toc) <u>Resources</u>\n",
+    "\n",
+    "- The American Community Survey website ([link](https://www.census.gov/programs-surveys/acs/))\n",
+    "- The American Community Survey Information Guide ([link](https://www.census.gov/programs-surveys/acs/about/information-guide.html))\n",
+    "- The dataset for this project ([link](https://www.kaggle.com/muonneutrino/us-census-demographic-data)).  Thank you again to [MuonNeutrino](https://www.kaggle.com/muonneutrino) and [Kaggle](https://www.kaggle.com/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"critism\"></a>\n",
+    "# [^](#toc) <u>Criticism</u>\n",
+    "\n",
+    "- How accurate is the data?  Many people flat out refuse to answer any [questions](https://www.youtube.com/watch?v=bYwdOxOBwgM).\n",
+    "- The estimated budget for 2019 is $3.8 billion ([link to census budget](https://www2.census.gov/about/budget/2019-Budget-Infographic-Bureau-Summary.pdf)).\n",
+    "- Here is a [sample form](https://www2.census.gov/programs-surveys/acs/methodology/questionnaires/2018/quest18.pdf) from 2018, you can decide how invasive the questions are for yourself"
+   ]
   }
  ],
  "metadata": {
