creating more columns for shelter predictions

--- a/in_progress/shelter/6_mod_age.ipynb
+++ b/in_progress/shelter/6_mod_age.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Score: \n",
+    "# Score: 11.54709\n",
     "\n",
     "### Imports"
    ]
@@ -791,8 +791,7 @@
     "full[\"is_weekend\"] = full.weekday.map(lambda x: int(x in [5, 6]))\n",
     "full[\"month\"] = full.DateTime.map(lambda x: x.month)\n",
     "full[\"hour\"] = full.DateTime.map(lambda x: x.hour)\n",
-    "print(full.OutcomeType.unique())\n",
-    "full.head(5)"
+    "print(full.OutcomeType.unique())"
    ]
   },
   {
@@ -1427,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -1458,9 +1457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.57468298  0.56700337  0.56977658]\n",
+      "\n",
+      "Average is ...\n",
+      "0.570487641106\n"
+     ]
+    }
+   ],
    "source": [
     "svc_model = SVC()\n",
     "svc_model.fit(train_x, train_y)\n",
@@ -1480,9 +1490,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.65323757  0.65061728  0.65106096]\n",
+      "\n",
+      "Average is ...\n",
+      "0.65163860626\n"
+     ]
+    }
+   ],
    "source": [
     "xgb_model = XGBClassifier()\n",
     "xgb_model.fit(train_x, train_y)\n",
@@ -1502,9 +1523,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.66827517  0.6634119   0.66329853]\n",
+      "\n",
+      "Average is ...\n",
+      "0.664995197173\n"
+     ]
+    }
+   ],
    "source": [
     "lgbm_model = LGBMClassifier()\n",
     "lgbm_model.fit(train_x, train_y)\n",
@@ -1520,22 +1552,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.66210302  0.65925926  0.65746042]\n",
+      "\n",
+      "Average is ...\n",
+      "0.659607567462\n"
+     ]
+    }
+   ],
    "source": [
     "model = VotingClassifier(estimators=[\n",
     "                                        (\"ETC\", etc_model),                                    \n",
     "                                        (\"RFC\", rfc_model),\n",
     "                                        (\"GBC\",gbc_model),\n",
-    "                                        (\"SVC\", svc_model),                                    \n",
+    "#                                         (\"SVC\", svc_model),                                    \n",
     "                                        (\"XGB\", xgb_model),\n",
     "                                        (\"LGBM\", lgbm_model)\n",
     "                                      ], voting='hard')\n",
     "\n",
-    "model = model.fit(train_x, train_y)"
+    "model = model.fit(train_x, train_y)\n",
+    "score_model(model)"
    ]
   },
   {
@@ -1547,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -1565,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -1578,7 +1620,7 @@
     "    \"Euthanasia\": [1 if pred == 3 else 0 for pred in predictions],\n",
     "    \"Return_to_owner\": [1 if pred == 2 else 0 for pred in predictions],\n",
     "    \"Transfer\": [1 if pred == 1 else 0 for pred in predictions]\n",
-    "}).to_csv('../../submissions/shelter_added_weekday_hour.csv',index=False)"
+    "}).to_csv('../../submissions/shelter_mod_age_no_svc.csv',index=False)"
    ]
   },
   {
