--- a/in_progress/shelter/8_ada_boost.ipynb
+++ b/in_progress/shelter/8_ada_boost.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Score: 11.45664\n",
+    "# Score: 11.94506\n",
     "\n",
     "### Imports"
    ]
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1057,11 +1057,11 @@
        "      <th>OutcomeSubtype</th>\n",
        "      <th>OutcomeType</th>\n",
        "      <th>...</th>\n",
-       "      <th>isNetured</th>\n",
        "      <th>age_year</th>\n",
        "      <th>age_month</th>\n",
        "      <th>age_week</th>\n",
        "      <th>age_day</th>\n",
+       "      <th>is_baby</th>\n",
        "      <th>Shorthair</th>\n",
        "      <th>Mediumhair</th>\n",
        "      <th>Longhair</th>\n",
@@ -1084,7 +1084,7 @@
        "      <td>Return_to_owner</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1107,8 +1107,8 @@
        "      <td>Suffering</td>\n",
        "      <td>Euthanasia</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1131,8 +1131,8 @@
        "      <td>Foster</td>\n",
        "      <td>Adoption</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1144,7 +1144,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 29 columns</p>\n",
+       "<p>3 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1158,20 +1158,20 @@
        "1 2013-10-13 12:44:00 NaN    Emily      Suffering       Euthanasia   \n",
        "2 2015-01-31 12:28:00 NaN   Pearce         Foster         Adoption   \n",
        "\n",
-       "          ...          isNetured  age_year  age_month  age_week  age_day  \\\n",
-       "0         ...                  1         1          0         0        0   \n",
-       "1         ...                  0         1          0         0        0   \n",
-       "2         ...                  1         2          0         0        0   \n",
+       "          ...          age_year  age_month  age_week  age_day  is_baby  \\\n",
+       "0         ...                 1          0         0        0        0   \n",
+       "1         ...                 1          0         0        0        0   \n",
+       "2         ...                 2          0         0        0        0   \n",
        "\n",
        "   Shorthair  Mediumhair  Longhair  Mix         first_breed  \n",
        "0          0           0         0    1   Shetland Sheepdog  \n",
        "1          1           0         0    1  Domestic Shorthair  \n",
        "2          0           0         0    1            Pit Bull  \n",
        "\n",
-       "[3 rows x 29 columns]"
+       "[3 rows x 30 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1332,8 +1332,8 @@
        "      <th>OutcomeSubtype</th>\n",
        "      <th>OutcomeType</th>\n",
        "      <th>...</th>\n",
+       "      <th>Mix</th>\n",
        "      <th>first_breed</th>\n",
-       "      <th>is_baby</th>\n",
        "      <th>Blue</th>\n",
        "      <th>Black</th>\n",
        "      <th>White</th>\n",
@@ -1358,8 +1358,8 @@
        "      <td>NaN</td>\n",
        "      <td>Return_to_owner</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
        "      <td>26</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1382,7 +1382,7 @@
        "      <td>Suffering</td>\n",
        "      <td>Euthanasia</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1407,7 +1407,7 @@
        "      <td>Adoption</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1430,8 +1430,8 @@
        "      <td>Partner</td>\n",
        "      <td>Transfer</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1454,8 +1454,8 @@
        "      <td>Partner</td>\n",
        "      <td>Transfer</td>\n",
        "      <td>...</td>\n",
-       "      <td>26</td>\n",
        "      <td>0</td>\n",
+       "      <td>26</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1478,24 +1478,24 @@
        "3            21.0  A683430           1      0     39 2014-07-11 19:09:00 NaN   \n",
        "4           730.0  A667013           0     19     12 2013-11-15 12:52:00 NaN   \n",
        "\n",
-       "   Name OutcomeSubtype      OutcomeType  ...   first_breed  is_baby  Blue  \\\n",
-       "0     1            NaN  Return_to_owner  ...            26        0     0   \n",
-       "1     1      Suffering       Euthanasia  ...             0        0     0   \n",
-       "2     1         Foster         Adoption  ...             1        0     1   \n",
-       "3     0        Partner         Transfer  ...             0        1     1   \n",
-       "4     0        Partner         Transfer  ...            26        0     0   \n",
+       "   Name OutcomeSubtype      OutcomeType  ...   Mix  first_breed  Blue  Black  \\\n",
+       "0     1            NaN  Return_to_owner  ...     1           26     0      1   \n",
+       "1     1      Suffering       Euthanasia  ...     1            0     0      0   \n",
+       "2     1         Foster         Adoption  ...     1            1     1      1   \n",
+       "3     0        Partner         Transfer  ...     1            0     1      0   \n",
+       "4     0        Partner         Transfer  ...     0           26     0      0   \n",
        "\n",
-       "   Black  White  Brown  Tabby  Tan  Red  Choc  \n",
-       "0      1      1      1      0    0    0     0  \n",
-       "1      0      0      0      1    0    0     0  \n",
-       "2      1      1      0      0    0    0     0  \n",
-       "3      0      0      0      0    0    0     0  \n",
-       "4      0      0      0      0    1    0     0  \n",
+       "   White  Brown  Tabby  Tan  Red  Choc  \n",
+       "0      1      1      0    0    0     0  \n",
+       "1      0      0      1    0    0     0  \n",
+       "2      1      0      0    0    0     0  \n",
+       "3      0      0      0    0    0     0  \n",
+       "4      0      0      0    1    0     0  \n",
        "\n",
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,12 +1510,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quick prediction"
+    "### Separate target from predictors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -1992,35 +1992,146 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Averaging all the models"
+    "### Ada Boost Classifier\n",
+    "\n",
+    "#### Attempt 1:\n",
+    "\n",
+    "tried:\n",
+    "\n",
+    "{\n",
+    "\"n_estimators\": [1, 50, 100],\n",
+    "\"learning_rate\": [0.05, 0.1, 0.2],\n",
+    "\"base_estimator\\__max_depth\": [None, 2, 4],\n",
+    "\"base_estimator\\__splitter\" :   [\"best\", \"random\"],\n",
+    "\"base_estimator\\__criterion\" : [\"gini\", \"entropy\"]\n",
+    "}\n",
+    "\n",
+    "best:\n",
+    "\n",
+    "{'base_estimator\\__criterion': 'entropy', 'base_estimator\\__max_depth': 4, 'base_estimator\\__splitter': 'random', 'learning_rate': 0.1, 'n_estimators': 100}\n",
+    "\n",
+    "#### Attempt 2:\n",
+    "\n",
+    "tried:\n",
+    "\n",
+    "{\n",
+    "\"n_estimators\": [50, 100, 120, 200],\n",
+    "\"base_estimator\\__max_depth\": [3, 4, 6],\n",
+    "}\n",
+    "\n",
+    "best:\n",
+    "\n",
+    "{'base_estimator\\__max_depth': 3, 'n_estimators': 120}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.66277634  0.66184063  0.65891995]\n",
-      "\n",
-      "Average is ...\n",
-      "0.661178974318\n"
+      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  36 out of  36 | elapsed:  2.2min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.645203531877\n",
+      "{'base_estimator__max_depth': 3, 'n_estimators': 120}\n"
      ]
     }
    ],
    "source": [
-    "model = VotingClassifier(estimators=[\n",
-    "                                        (\"ETC\", etc_model),                                    \n",
-    "                                        (\"RFC\", rfc_model),\n",
-    "                                        (\"GBC\",gbc_model),\n",
-    "#                                         (\"SVC\", svc_model),                                    \n",
-    "                                        (\"XGB\", xgb_model),\n",
-    "                                        (\"LGBM\", lgbm_model)\n",
-    "                                      ], voting='hard')\n",
+    "## Search grid for optimal parameters\n",
+    "ada_param_grid = {\n",
+    "                    \"n_estimators\": [50, 100, 120, 200],\n",
+    "                    \"base_estimator__max_depth\": [3, 4, 6],\n",
+    "                 }\n",
     "\n",
+    "DTC = DecisionTreeClassifier(random_state=17, splitter=\"random\", criterion=\"entropy\")\n",
+    "ADA = AdaBoostClassifier(base_estimator=DTC, learning_rate=0.08)\n",
+    "\n",
+    "gsADA = GridSearchCV(ADA, param_grid=ada_param_grid, cv=kfold, scoring=\"accuracy\", verbose=1)\n",
+    "\n",
+    "gsADA.fit(train_x, train_y)\n",
+    "\n",
+    "# Best score\n",
+    "print(gsADA.best_score_)\n",
+    "print(gsADA.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "decision_tree = DecisionTreeClassifier(\n",
+    "                                        random_state=17,\n",
+    "                                        max_depth=4,\n",
+    "                                        splitter=\"random\",\n",
+    "                                        criterion=\"entropy\"\n",
+    "                                      )\n",
+    "\n",
+    "ada_model = AdaBoostClassifier(\n",
+    "                                base_estimator=decision_tree,\n",
+    "                                learning_rate=0.1,\n",
+    "                                n_estimators=100\n",
+    "                              )\n",
+    "\n",
+    "ada_model.fit(train_x, train_y)\n",
+    "score_model(ada_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Averaging all the models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.64605544  0.63995511  0.64657011]\n",
+      "\n",
+      "Average is ...\n",
+      "0.644193552372\n"
+     ]
+    }
+   ],
+   "source": [
+    "# model = VotingClassifier(estimators=[\n",
+    "#                                         (\"ETC\", etc_model),                                    \n",
+    "#                                         (\"RFC\", rfc_model),\n",
+    "#                                         (\"GBC\",gbc_model),\n",
+    "#                                         (\"XGB\", xgb_model),\n",
+    "#                                         (\"ADA\", ada_model),\n",
+    "#                                         (\"LGBM\", lgbm_model)\n",
+    "#                                       ], voting='hard')\n",
+    "\n",
+    "model = gsADA.best_estimator_\n",
+    "\n",
+    "#### Fit and score model\n",
     "model = model.fit(train_x, train_y)\n",
     "score_model(model)"
    ]
@@ -2034,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -2052,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -2065,7 +2176,7 @@
     "    \"Euthanasia\": [1 if pred == 3 else 0 for pred in predictions],\n",
     "    \"Return_to_owner\": [1 if pred == 2 else 0 for pred in predictions],\n",
     "    \"Transfer\": [1 if pred == 1 else 0 for pred in predictions]\n",
-    "}).to_csv('../../submissions/shelter_more_cols.csv',index=False)"
+    "}).to_csv('../../submissions/shelter_ada_2.csv',index=False)"
    ]
   },
   {
