added year to shelter and tuned again

--- a/in_progress/shelter/9_more_tuning.ipynb
+++ b/in_progress/shelter/9_more_tuning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Score: 11.37825\n",
+    "# Score: 11.32097\n",
     "\n",
     "### Imports"
    ]
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1119,6 +1119,21 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 24 candidates, totalling 72 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  72 out of  72 | elapsed: 236.6min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.668026040108\n",
+      "{'max_depth': 10, 'max_features': 12, 'min_samples_leaf': 70, 'n_estimators': 120}\n"
      ]
     }
    ],
@@ -1225,14 +1240,54 @@
     "\n",
     "{'base_estimator\\__max_depth': 3, 'n_estimators': 120}\n",
     "\n",
+    "#### Attempt 2:\n",
+    "\n",
+    "tried:\n",
+    "\n",
+    "ada_param_grid = {\n",
+    "                    \"n_estimators\": [50, 100, 120, 200],\n",
+    "                    \"base_estimator__max_depth\": [3, 4, 6],\n",
+    "                 }\n",
+    "\n",
+    "DTC = DecisionTreeClassifier(random_state=17, splitter=\"random\", criterion=\"entropy\")\n",
+    "\n",
+    "ADA = AdaBoostClassifier(base_estimator=DTC, learning_rate=0.08)\n",
+    "\n",
+    "best:\n",
+    "\n",
+    "{'base_estimator__max_depth': 3, 'n_estimators': 120}\n",
+    "\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 6 candidates, totalling 18 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  18 out of  18 | elapsed:  2.5min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.643482490272\n",
+      "{'base_estimator__max_depth': 3, 'n_estimators': 120}\n"
+     ]
+    }
+   ],
    "source": [
     "## Search grid for optimal parameters\n",
     "ada_param_grid = {\n",
@@ -1306,9 +1361,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.6539109   0.65162738  0.65229595]\n",
+      "\n",
+      "Average is ...\n",
+      "0.652611409538\n"
+     ]
+    }
+   ],
    "source": [
     "xgb_model = XGBClassifier()\n",
     "xgb_model.fit(train_x, train_y)\n",
@@ -1328,9 +1394,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.67197845  0.6657688   0.66879982]\n",
+      "\n",
+      "Average is ...\n",
+      "0.668849024355\n"
+     ]
+    }
+   ],
    "source": [
     "lgbm_model = LGBMClassifier()\n",
     "lgbm_model.fit(train_x, train_y)\n",
@@ -1346,17 +1423,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.66558187  0.65982043  0.66318626]\n",
+      "[ 0.66760184  0.66296296  0.66385989]\n",
       "\n",
       "Average is ...\n",
-      "0.662862849866\n"
+      "0.664808229623\n"
      ]
     }
    ],
@@ -1364,6 +1441,7 @@
     "etc_model = gsExtC.best_estimator_\n",
     "rfc_model = gsRFC.best_estimator_\n",
     "gbc_model = gsGBC.best_estimator_\n",
+    "ada_model = gsADA.best_estimator_\n",
     "\n",
     "model = VotingClassifier(estimators=[\n",
     "                                        (\"ETC\", etc_model),                                    \n",
@@ -1388,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -1406,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -1419,7 +1497,7 @@
     "    \"Euthanasia\": [1 if pred == 3 else 0 for pred in predictions],\n",
     "    \"Return_to_owner\": [1 if pred == 2 else 0 for pred in predictions],\n",
     "    \"Transfer\": [1 if pred == 1 else 0 for pred in predictions]\n",
-    "}).to_csv('../../submissions/shelter_voting_tuned_more.csv',index=False)"
+    "}).to_csv('../../submissions/shelter_voting_powerful_tuning.csv',index=False)"
    ]
   },
   {
