added model analysis to the shelter kernel

--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -858,12 +858,12 @@
     "             label=\"Cross-validation score\")\n",
     "\n",
     "    plt.legend(loc=\"best\")\n",
-    "    return plt\n",
+    "    plt.show()\n",
     "\n",
-    "g = plot_learning_curve( gsRFC.best_estimator_,   \"RF mearning curves\",               train_x, train_y, cv=kfold )\n",
-    "g = plot_learning_curve( gsExtC.best_estimator_,  \"ExtraTrees learning curves\",       train_x, train_y, cv=kfold )\n",
-    "g = plot_learning_curve( gsSVMC.best_estimator_,  \"SVC learning curves\",              train_x, train_y, cv=kfold )\n",
-    "g = plot_learning_curve( gsGBC.best_estimator_,   \"GradientBoosting learning curves\", train_x, train_y, cv=kfold )"
+    "plot_learning_curve( gsRFC.best_estimator_,   \"RF mearning curves\",               train_x, train_y, cv=kfold )\n",
+    "plot_learning_curve( gsExtC.best_estimator_,  \"ExtraTrees learning curves\",       train_x, train_y, cv=kfold )\n",
+    "plot_learning_curve( gsSVMC.best_estimator_,  \"SVC learning curves\",              train_x, train_y, cv=kfold )\n",
+    "plot_learning_curve( gsGBC.best_estimator_,   \"GradientBoosting learning curves\", train_x, train_y, cv=kfold )"
    ]
   },
   {
