added column identifiers to home default project

--- a/in_progress/home_default/3_stacking.ipynb
+++ b/in_progress/home_default/3_stacking.ipynb
@@ -171,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = full[:train_N]\n",
