gott help from sban work and kernel

--- a/in_progress/home_default/3_sban_help.ipynb
+++ b/in_progress/home_default/3_sban_help.ipynb
@@ -41,14 +41,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of train: (307511, 122)\n",
-      "Shape of test: (48744, 121)\n"
+      "Shape of train: (307511, 123)\n",
+      "Shape of test: (48744, 122)\n"
      ]
     }
    ],
    "source": [
-    "train = pd.read_csv(\"../../data/home_default/train.csv\")\n",
-    "test  = pd.read_csv(\"../../data/home_default/test.csv\")\n",
+    "DATA_PATH = \"../../data/home_default/\"\n",
+    "\n",
+    "train = pd.read_csv(DATA_PATH + \"train.csv\")\n",
+    "test  = pd.read_csv(DATA_PATH + \"test.csv\")\n",
+    "\n",
+    "test['is_train'] = 0\n",
+    "train['is_train'] = 1\n",
     "\n",
     "print(\"Shape of train:\", train.shape)\n",
     "print(\"Shape of test:\",  test.shape)"
@@ -58,127 +63,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Merge train and test data"
+    "### Load other data sources"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "full = pd.concat([train, test])\n",
-    "train_N = len(train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Fill categorical NaN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for col in ('NAME_CONTRACT_TYPE', 'CODE_GENDER', 'FLAG_OWN_CAR', 'FLAG_OWN_REALTY',\n",
-    "       'NAME_TYPE_SUITE', 'NAME_INCOME_TYPE', 'NAME_EDUCATION_TYPE',\n",
-    "       'NAME_FAMILY_STATUS', 'NAME_HOUSING_TYPE', 'OCCUPATION_TYPE',\n",
-    "       'WEEKDAY_APPR_PROCESS_START', 'ORGANIZATION_TYPE', 'FONDKAPREMONT_MODE',\n",
-    "       'HOUSETYPE_MODE', 'WALLSMATERIAL_MODE', 'EMERGENCYSTATE_MODE'):\n",
-    "    full[col] = full[col].fillna(full[col].mode()[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Fill numeric NaN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "missing_cols = [col for col in full.columns if any(full[col].isnull())]\n",
-    "for col in missing_cols:\n",
-    "    full[col] = full[col].fillna(full[col].median())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Confirm missing values are gone"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "full.isnull().sum().sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get dummies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "full = pd.get_dummies(full)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Separate data back into train and test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "train = full[:train_N]\n",
-    "test = full[train_N:]\n",
-    "del full, train_N"
+    "bureau = pd.read_csv(DATA_PATH + \"bureau.csv\")\n",
+    "\n",
+    "# pcb = pd.read_csv(DATA_PATH + \"POS_CASH_balance.csv\")\n",
+    "\n",
+    "# bureau_balance = pd.read_csv(DATA_PATH + \"bureau_balance.csv\")\n",
+    "\n",
+    "# credit_card_balance = pd.read_csv(DATA_PATH + \"credit_card_balance.csv\")\n",
+    "\n",
+    "previous_application = pd.read_csv(DATA_PATH + \"previous_application.csv\")\n",
+    "\n",
+    "# installments_payments = pd.read_csv(DATA_PATH + \"installments_payments.csv\")"
    ]
   },
   {
@@ -190,17 +94,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "train_y = train.TARGET\n",
-    "train_x = train.drop([\"TARGET\", \"SK_ID_CURR\"], axis=1)\n",
+    "train_x = train.drop([\"TARGET\"], axis=1)\n",
     "\n",
     "test_id = test.SK_ID_CURR\n",
-    "test_x  = test.drop([\"TARGET\", \"SK_ID_CURR\"], axis=1)"
+    "test_x  = test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merge train and test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "full = pd.concat([train_x, test_x])\n",
+    "train_N = len(train_x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Olivier](https://www.kaggle.com/ogrellier) approach \n",
+    "\n",
+    "([his work](https://www.kaggle.com/ogrellier/good-fun-with-ligthgbm))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def _get_categorical_features(df):\n",
+    "    return [col for col in df.columns if df[col].dtype == 'object']\n",
+    "\n",
+    "# get categorical features\n",
+    "data_cats = _get_categorical_features(full)\n",
+    "prev_app_cats = _get_categorical_features(previous_application)\n",
+    "bureau_cats = _get_categorical_features(bureau)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to create dummy variables of categorical features\n",
+    "def _get_dummies(df, cats):\n",
+    "    for col in cats:\n",
+    "        df = pd.concat([df, pd.get_dummies(df[col], prefix=col)], axis=1)\n",
+    "    return df \n",
+    "\n",
+    "# create additional dummy features \n",
+    "previous_application = _get_dummies(previous_application, prev_app_cats)\n",
+    "bureau = _get_dummies(bureau, bureau_cats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# function to factorize categorical features\n",
+    "def _factorize_categoricals(df, cats):\n",
+    "    for col in cats:\n",
+    "        df[col], _ = pd.factorize(df[col])\n",
+    "    return df \n",
+    "\n",
+    "# factorize the categorical features from train and test data\n",
+    "full = _factorize_categoricals(full, data_cats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregate Previous Applications Data and Merge with Original Data\n",
+    "\n",
+    "[sban](https://www.kaggle.com/shivamb) provided the code ([link](https://www.kaggle.com/shivamb/homecreditrisk-extensive-eda-baseline-model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# count the number of previous applications for a given ID\n",
+    "prev_apps_count = previous_application[['SK_ID_CURR', 'SK_ID_PREV']].groupby('SK_ID_CURR').count()\n",
+    "previous_application['SK_ID_PREV'] = previous_application['SK_ID_CURR'].map(prev_apps_count['SK_ID_PREV'])\n",
+    "\n",
+    "# Average values for all other features in previous applications\n",
+    "prev_apps_avg = previous_application.groupby('SK_ID_CURR').mean()\n",
+    "prev_apps_avg.columns = ['p_' + col for col in prev_apps_avg.columns]\n",
+    "full = full.merge(right=prev_apps_avg.reset_index(), how='left', on='SK_ID_CURR')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregate Bureau Data and Merge with Original Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Average Values for all bureau features \n",
+    "bureau_avg = bureau.groupby('SK_ID_CURR').mean()\n",
+    "bureau_avg['buro_count'] = bureau[['SK_ID_BUREAU','SK_ID_CURR']].groupby('SK_ID_CURR').count()['SK_ID_BUREAU']\n",
+    "bureau_avg.columns = ['b_' + f_ for f_ in bureau_avg.columns]\n",
+    "full = full.merge(right=bureau_avg.reset_index(), how='left', on='SK_ID_CURR')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split full back into train and test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# prepare final Train X and Test X dataframes \n",
+    "ignore_features = ['SK_ID_CURR', 'is_train']\n",
+    "relevant_features = [col for col in full.columns if col not in ignore_features]\n",
+    "\n",
+    "train_x = full[full['is_train'] == 1][relevant_features]\n",
+    "test_x  = full[full['is_train'] == 0][relevant_features]\n",
+    "del full, train_N"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split data into train and validation data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split \n",
+    "import lightgbm as lgb\n",
+    "\n",
+    "train_x, val_x, train_y, val_y = train_test_split(train_x, train_y, test_size=0.2, random_state=17)\n",
+    "lgb_train = lgb.Dataset(data=train_x, label=train_y)\n",
+    "lgb_eval  = lgb.Dataset(data=val_x, label=val_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/lightgbm/engine.py:99: UserWarning: Found `num_iteration` in params. Will use it instead of argument\n",
+      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training until validation scores don't improve for 150 rounds.\n",
+      "[200]\tvalid_0's auc: 0.737383\n",
+      "[400]\tvalid_0's auc: 0.751357\n",
+      "[600]\tvalid_0's auc: 0.762349\n",
+      "[800]\tvalid_0's auc: 0.767113\n",
+      "[1000]\tvalid_0's auc: 0.769436\n",
+      "[1200]\tvalid_0's auc: 0.77078\n",
+      "[1400]\tvalid_0's auc: 0.771461\n",
+      "[1600]\tvalid_0's auc: 0.771772\n",
+      "[1800]\tvalid_0's auc: 0.772031\n",
+      "[2000]\tvalid_0's auc: 0.772075\n",
+      "Early stopping, best iteration is:\n",
+      "[1901]\tvalid_0's auc: 0.772147\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = {'task': 'train', 'boosting_type': 'gbdt', 'objective': 'binary', 'metric': 'auc', \n",
+    "          'learning_rate': 0.01, 'num_leaves': 48, 'num_iteration': 5000, 'verbose': 0 ,\n",
+    "          'colsample_bytree':.8, 'subsample':.9, 'max_depth':7, 'reg_alpha':.1, 'reg_lambda':.1, \n",
+    "          'min_split_gain':.01, 'min_child_weight':1}\n",
+    "\n",
+    "start = time.time()\n",
+    "model = lgb.train(params, lgb_train, valid_sets=lgb_eval, early_stopping_rounds=150, verbose_eval=200)\n",
+    "print(\"Training took {} seconds\".format(round(time.time() - start)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "predictions = model.predict(test_x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pd.DataFrame({\n",
+    "    \"SK_ID_CURR\": test_id,\n",
+    "    \"TARGET\": predictions\n",
+    "}).to_csv(\"../../submissions/sban_help\", index=False)"
    ]
   },
   {
